GMM_Main/src/objects/Award__c.object
<CustomObject>
    <fields>
        <fullName>State_CLR_Code__c</fullName>
        <description>Used for Grant #.</description>
        <formula>IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;CA&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;WA&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;AK&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;HI&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;ID&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;MT&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;NV&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;OR&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;UT&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;WY&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;GU&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;AS&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;MP&quot;) , &quot;P&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;PA&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;NJ&quot;) , &quot;A&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;ME&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;NH&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;RI&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;CT&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;VT&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;MA&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;DE&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;MD&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;PR&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;VI&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;DC&quot;) , &quot;A&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;IL&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;OH&quot;) , &quot;N&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;WI&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;IN&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;IA&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;MI&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;MN&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;NE&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;SD&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;ND&quot;) , &quot;N&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;FL&quot;) , &quot;S&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;GA&quot;) , &quot;S&quot;, 
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;AL&quot;) , &quot;S&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;MS&quot;) , &quot;S&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;TN&quot;) , &quot;S&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;SC&quot;) , &quot;S&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;KY&quot;) , &quot;S&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;WV&quot;) , &quot;S&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;VA&quot;) , &quot;S&quot;,
IF( ISPICKVAL( Application_ID__r.Project__r.State__c , &quot;NC&quot;) , &quot;S&quot;,
&quot;W&quot;))))))))))))))))))))))))))))))))))))))))))))))</formula>
        <label>State CLR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>States__c</fullName>
        <description>DDP</description>
        <formula>Text(Application_ID__r.Project__r.Organization__r.States__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>States</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Award__c</fullName>
        <formula>Application_ID__r.Sub_Application__c</formula>
        <label>Sub Award?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_budgets_for_multi_year_grants__c</fullName>
        <formula>TEXT(Application_ID__r.NOFA_RFP__r.Sub_Budgets_for_Multi_Year_Grants__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-budgets for multi-year grants</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_to_FAPIIS_Review__c</fullName>
        <label>Subject to FAPIIS Review</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>XO_CSHR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSHR Executive Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Award6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year_of_Grant__c</fullName>
        <formula>Application_ID__r.Year_of_Grant__c</formula>
        <label>Year of Grant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip1__c</fullName>
        <description>DDP</description>
        <formula>Application_ID__r.Project__r.Organization__r.Zip1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eSigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Award approvals.</description>
        <label>eSigned?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of__c</fullName>
        <formula>IF(Number_of_Child_Awards__c = 0, 0, 
IF(Number_of_Child_Awards__c = 1, 1, 
Number_of_Child_Awards__c - 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>of #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>test_email__c</fullName>
        <label>test email</label>
        <type>Email</type>
    </fields>
    <label>Award</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Organization_Legal_Name__c</columns>
        <columns>Year_of_Grant__c</columns>
        <columns>Application_ID__c</columns>
        <columns>Grant_Type__c</columns>
        <columns>Corporate_Program1__c</columns>
        <columns>Grant_Number__c</columns>
        <columns>Cost_Share__c</columns>
        <columns>Program_Officer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Grant_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Grant_Status__c</field>
            <operation>equals</operation>
            <value>Awaiting PO Certification</value>
        </filters>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>GO_Group</group>
            <group>PO_Group</group>
            <group>SGO_Group</group>
            <group>SPO_Group</group>
            <group>XO_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Awarded_Grants</fullName>
        <columns>NAME</columns>
        <columns>Organization_Legal_Name__c</columns>
        <columns>Year_of_Grant__c</columns>
        <columns>Application_ID__c</columns>
        <columns>Grant_Type__c</columns>
        <columns>Corporate_Program1__c</columns>
        <columns>Grant_Number__c</columns>
        <columns>Grant_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Grant_Status__c</field>
            <operation>equals</operation>
            <value>Awarded</value>
        </filters>
        <label>Awarded Grants</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>GO_Group</group>
            <group>PO_Group</group>
            <group>SGO_Group</group>
            <group>SPO_Group</group>
            <group>XO_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Created_Today2</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Grant_Number__c</columns>
        <columns>Master_Award__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>8/9/2016 12:00 AM</value>
        </filters>
        <label>Created Today</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Awards</fullName>
        <columns>NAME</columns>
        <columns>Organization_Legal_Name__c</columns>
        <columns>Year_of_Grant__c</columns>
        <columns>Application_ID__c</columns>
        <columns>Grant_Type__c</columns>
        <columns>Corporate_Program1__c</columns>
        <columns>Grant_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Awards</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NCCC</fullName>
        <columns>NAME</columns>
        <columns>Organization_Legal_Name__c</columns>
        <columns>Year_of_Grant__c</columns>
        <columns>Application_ID__c</columns>
        <columns>Grant_Type__c</columns>
        <columns>Corporate_Program1__c</columns>
        <columns>Grant_Number__c</columns>
        <columns>Cost_Share__c</columns>
        <columns>Program_Officer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Grant_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Grant_Status__c</field>
            <operation>equals</operation>
            <value>Awaiting PO Certification</value>
        </filters>
        <filters>
            <field>Corporate_Program1__c</field>
            <operation>equals</operation>
            <value>AmeriCorps NCCC</value>
        </filters>
        <label>NCCC</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>GO_Group</group>
            <group>PO_Group</group>
            <group>SGO_Group</group>
            <group>SPO_Group</group>
            <group>XO_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VISTA_Cost_Share</fullName>
        <columns>NAME</columns>
        <columns>Organization_Legal_Name__c</columns>
        <columns>Year_of_Grant__c</columns>
        <columns>Application_ID__c</columns>
        <columns>Grant_Type__c</columns>
        <columns>Corporate_Program1__c</columns>
        <columns>Grant_Number__c</columns>
        <columns>Cost_Share__c</columns>
        <columns>Program_Officer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Corporate_Program1__c</field>
            <operation>equals</operation>
            <value>VISTA State</value>
        </filters>
        <label>VISTA Cost Share</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>GO_Group</group>
            <group>PO_Group</group>
            <group>SGO_Group</group>
            <group>SPO_Group</group>
            <group>XO_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Award ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Award</pluralLabel>
    <recordTypes>
        <fullName>App_Award</fullName>
        <active>true</active>
        <label>App Award</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prime_Award</fullName>
        <active>true</active>
        <label>Prime Award</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sub_App_Award</fullName>
        <active>true</active>
        <label>Sub App Award</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Agreement_Period_End_Date</fullName>
        <active>true</active>
        <description>Agreement Period End Date must be greater than the date entered in the “Agreement Period Start Date” field.
US # 4783.</description>
        <errorConditionFormula>Agreement_Period_End_Date__c &lt;= Agreement_Period_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Agreement_Period_End_Date__c</errorDisplayField>
        <errorMessage>Agreement Period End Date must be greater than Agreement Period Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Award_Name</fullName>
        <active>true</active>
        <description>Applicant cannot change Award Name.</description>
        <errorConditionFormula>AND(ISCHANGED( Name ),  $Profile.Name = &apos;Applicant&apos;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You cannot edit the Award Name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Budget_Period_End_Date1</fullName>
        <active>true</active>
        <description>Date entered in this field must be greater than the date entered in the “Budget Period Start Date” field.
US # 4786</description>
        <errorConditionFormula>AND(OR(ISPICKVAL( Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c , &apos;Yes&apos;),ISPICKVAL( Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c , &apos;Optional&apos;), 
OR(ISPICKVAL( Application_ID__r.Program_Type__c, &apos;Program Grant&apos;),ISPICKVAL( Application_ID__r.Program_Type__c, &apos;Support Grant&apos;))),
 Budget_Period_End__c &lt;= Budget_Period_Start__c )</errorConditionFormula>
        <errorDisplayField>Budget_Period_End__c</errorDisplayField>
        <errorMessage>Budget Period End Date should begreater than Budget Period Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Budget_Period_End_Date2</fullName>
        <active>true</active>
        <description>Date entered must be less than or equal to the date in the “Grant Performance Period End Date” field on the award. 
US # 4786</description>
        <errorConditionFormula>AND(OR(ISPICKVAL( Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c , &apos;Yes&apos;),ISPICKVAL( Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c , &apos;Optional&apos;), 
OR(ISPICKVAL( Application_ID__r.Program_Type__c, &apos;Program Grant&apos;),ISPICKVAL( Application_ID__r.Program_Type__c, &apos;Support Grant&apos;))),
 Budget_Period_End__c &gt; Grant_Performance_Period_End_Date__c )</errorConditionFormula>
        <errorDisplayField>Budget_Period_End__c</errorDisplayField>
        <errorMessage>Budget Period End Date cannot be greater than Grant Performance Period End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Budget_Period_Start_Date</fullName>
        <active>true</active>
        <description>Date entered must be greater than or equal to the date in the “Grant Performance Period Start Date” field on the award.
US # 4786</description>
        <errorConditionFormula>AND(OR(ISPICKVAL( Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c , &apos;Yes&apos;),ISPICKVAL( Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c , &apos;Optional&apos;), 
OR(ISPICKVAL( Application_ID__r.Program_Type__c, &apos;Program Grant&apos;),ISPICKVAL( Application_ID__r.Program_Type__c, &apos;Support Grant&apos;))),
 Budget_Period_Start__c &lt; Grant_Performance_Period_Start_Date__c)</errorConditionFormula>
        <errorDisplayField>Budget_Period_Start__c</errorDisplayField>
        <errorMessage>Budget Period Start Date cannot be less than Grant Performance Period Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enrollment_Period_End_Date1</fullName>
        <active>true</active>
        <description>Date entered in this field must be greater than the date entered in the “Enrollment Period Start Date” field.
US # 4785</description>
        <errorConditionFormula>AND(ISPICKVAL( Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c , &apos;Yes&apos;),

 Enrollment_Period_End_Date__c  &lt;= Enrollment_Period_Start_Date__c )</errorConditionFormula>
        <errorDisplayField>Enrollment_Period_End_Date__c</errorDisplayField>
        <errorMessage>Enrollment Period End Date should be greater then Enrollment Period Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enrollment_Period_End_Date2</fullName>
        <active>true</active>
        <description>Date date entered must be less than or equal to the date in the “Budget Period End Date” field on the award. 
US # 4785</description>
        <errorConditionFormula>AND(ISPICKVAL( Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c , &apos;Yes&apos;),

 Enrollment_Period_End_Date__c  &gt;  Budget_Period_End__c )</errorConditionFormula>
        <errorDisplayField>Enrollment_Period_End_Date__c</errorDisplayField>
        <errorMessage>Enrollment Period End Date cannot be greater than Budget Period End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enrollment_Period_Start_Date1</fullName>
        <active>true</active>
        <description>Date entered in this field must be greater than or equal to the date entered in the “Budget Period Start Date” on the award.
US # 4785</description>
        <errorConditionFormula>AND(ISPICKVAL( Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c , &apos;Yes&apos;),

 Enrollment_Period_Start_Date__c  &lt;  Budget_Period_Start__c )</errorConditionFormula>
        <errorDisplayField>Enrollment_Period_Start_Date__c</errorDisplayField>
        <errorMessage>Enrollment Period Start Date cannot be less then Budget Period Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enrollment_Period_Start_Date2</fullName>
        <active>true</active>
        <description>Date entered must be less than or equal to the date in the “Budget Period End Date” field on the award.
US # 4785</description>
        <errorConditionFormula>AND(ISPICKVAL( Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c , &apos;Yes&apos;),

 Enrollment_Period_Start_Date__c  &gt;  Budget_Period_End__c )</errorConditionFormula>
        <errorDisplayField>Enrollment_Period_Start_Date__c</errorDisplayField>
        <errorMessage>Enrollment Period Start Date cannot be greater than Budget Period End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Grant_Performance_Period_End_Date1</fullName>
        <active>true</active>
        <description>US # 4784</description>
        <errorConditionFormula>AND(OR(ISPICKVAL( Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c , &apos;Yes&apos;),ISPICKVAL( Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c , &apos;Optional&apos;), 
OR(ISPICKVAL( Application_ID__r.Program_Type__c, &apos;Program Grant&apos;),ISPICKVAL( Application_ID__r.Program_Type__c, &apos;Support Grant&apos;))),
Grant_Performance_Period_End_Date__c &lt;= Grant_Performance_Period_Start_Date__c)</errorConditionFormula>
        <errorDisplayField>Grant_Performance_Period_End_Date__c</errorDisplayField>
        <errorMessage>Grant Performance End Date should be greater than Grant Performance Period Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Grant_Performance_Period_End_Date2</fullName>
        <active>true</active>
        <description>US # 4784</description>
        <errorConditionFormula>AND(ISPICKVAL( Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c , &apos;Optional&apos;), 
OR(ISPICKVAL( Application_ID__r.Program_Type__c, &apos;Program Grant&apos;),ISPICKVAL( Application_ID__r.Program_Type__c, &apos;Support Grant&apos;)), 
Grant_Performance_Period_End_Date__c &gt; Agreement_Period_End_Date__c )</errorConditionFormula>
        <errorDisplayField>Grant_Performance_Period_End_Date__c</errorDisplayField>
        <errorMessage>Grant Performance End Date should less than Agreement Period End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Grant_Performance_Period_Start_Date</fullName>
        <active>true</active>
        <description>Date entered must be greater than or equal to the date in the “Agreement Period Start Date” field on the award object.
US # 4784</description>
        <errorConditionFormula>AND(ISPICKVAL( Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c , &apos;Optional&apos;), 
OR(ISPICKVAL( Application_ID__r.Program_Type__c, &apos;Program Grant&apos;),ISPICKVAL( Application_ID__r.Program_Type__c, &apos;Support Grant&apos;)), 
Grant_Performance_Period_Start_Date__c &lt;  Agreement_Period_Start_Date__c 
)</errorConditionFormula>
        <errorDisplayField>Grant_Performance_Period_Start_Date__c</errorDisplayField>
        <errorMessage>Grant Performance Period Start Date should be greater than or equal to Agreement Period Start Date</errorMessage>
    </validationRules>
</CustomObject>